--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -1,14 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/nosotros.css.css">
     <title>Nosotros</title>
 </head>
+
+<img class="img" src="https://juanmadeavifue.files.wordpress.com/2011/07/empresa1.jpg" alt="">
+
+<div class="container" class="card"  style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Misión</h5>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestra misión</h6> -->
+        <br>
+        <p class="card-text">Nuestra misión es entregar y producir semillas de calidad y altamente productivas,
+            cumpliendo con los mejores estándares de producción..</p>
+        <!-- <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a> -->
+    </div>
+</div>
+
+
+<div class="container" class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Visión</h5>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestra visión</h6> -->
+        <br>
+        <p class="card-text">Ser líder en producción de plantas, y mejorar los estándares de calidad aportando al
+            mercado de semillas nacional. Fortalecer nuestra experiencia, nuestro equipo de trabajo y mejor en cuanto a
+            tecnología, esto nos llevará a estar dentro de los mejores del estado</p>
+        <!-- <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a> -->
+    </div>
+</div>
+
+<div class="container" class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Objetivo</h5>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestro Objetivo</h6> -->
+        <br>
+        <p class="card-text">Nuestro objetivo se enfoca en satisfacer las necesidades de nuestros clientes, abarcando
+            desde
+            productores nacionales, comunidades y personas particulares.</p>
+        <!-- <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a> -->
+    </div>
+</div>
+
+
+
+<div class="container" class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Valores</h5>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestro Objetivo</h6> -->
+        <br>
+        <p class="card-text">Nuestro objetivo se enfoca en satisfacer las necesidades de nuestros clientes, abarcando
+            desde productores nacionales, comunidades y personas particulares.</p>
+        <ol>
+            <li>
+                Integridad: La honradez y la integridad son nuestros activos más importantes y deben presidir la
+                dirección
+                de nuestro negocio.</li>
+
+            <li> permanente de la innovación: Fomentar las ideas nuevas, la iniciativa y creatividad a todos los
+                niveles.</li>
+
+            <li>Satisfacción del cliente: Situar a nuestros clientes en el centro de nuestras actividades empresariales
+                y
+                contribuir a su éxito.</li>
+
+            <li>Apertura al exterior: Buscar activamente las mejores prácticas en todos los ámbitos con objeto de poder
+                ofrecer una oferta de mayor valor a nuestros clientes.</li>
+
+            <li>Excelencia empresarial: Mejora continua, eficacia y eficiencia en las actuaciones de la empresa.</li>
+
+            <li>Trabajo en equipo: Compartir los conocimientos, las ideas y la experiencia de cada uno para tomar las
+                mejores decisiones en el ámbito del grupo.</li>
+
+            <li>Compromiso con las personas: Promover el talento, ofrecer oportunidades, desarrollar líderes,
+                recompensar la
+                consecución de objetivos.</li>
+
+        </ol>
+    </div>
+</div>
+
+
+
+
+
 <body>
-    
 
 
-    
+
+    <script>nosotros.js</script>
+
 </body>
+
 </html>
