--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -3,3 +3,14 @@
     height: auto;
 }
 
+.card1 {
+display: flex;
+flex-direction: row;
+
+}
+
+.card2{
+    display: flex;
+    flex-direction:row;
+    align-items: flex-end;
+}
