--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -6,113 +6,172 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/styles/nosotros.css.css" />
+    <link rel="stylesheet" href="/styles/nosotros.css" />
     <title>Nosotros</title>
+</head>
+</nav>
+<div class="jumbotron">
+</div>
+<nav>
+    <ul class="nav nav-pills nav-fill justify-content-center nav2">
+        <li class="nav-item">
+            <a class="nav-link  nav-link2" href="#">Galería</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link nav-link2" href="#">Blog</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link nav-link2" href="#">Rastreo</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link nav-link2" href="#" tabindex="-1" aria-disabled="true">Otros vendedores</a>
+        </li>
+    </ul>
+</nav>
+<main>
+    <div class="col-12 col-sm-6 col-md-3"></div>
+</main>
+<section>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
 
-    <header>
+</section>
+<header>
+    <!-- <div align="center"><img src="https://juanmadeavifue.files.wordpress.com/2011/07/empresa1.jpg"></div> -->
+    <!-- <img class="img" src="https://juanmadeavifue.files.wordpress.com/2011/07/empresa1.jpg" alt="" /> -->
+    <br>
+    <br>
+    <br>
+</header>
+<div align="center">
+    <h1> Acerca de Nosotros <h1>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-        <img class="img" src="https://juanmadeavifue.files.wordpress.com/2011/07/empresa1.jpg" alt="" />
-
-    </header>
-
-<body>
+<body class="body">
 
 
     <!-- card  1 -->
-    <div class="container">
-        <div class="card1"  class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">Misión</h5>
-                <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestra misión</h6> -->
-                <br>
-                <p class="card-text">Nuestra misión es entregar y producir semillas de calidad y altamente productivas,
-                    cumpliendo con los mejores estándares de producción..</p>
-                <!-- <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a> -->
+
+    <div class="padre-horizontal">
+        <div class="hijo-vertical">
+
+
+            <div class="card">
+                <img src="https://contabilidad360.files.wordpress.com/2016/10/mision.png?w=300" class="card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <p class="card-text">Nuestra misión es entregar y producir semillas de calidad y altamente
+                        productivas, cumpliendo con los mejores estándares de producción.</p>
+                </div>
+            </div>
+
+            <div class="card margentop">
+                <img src="http://www.uv.mx/veracruz/odontologia/files/2013/02/vision.png" class="card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <p class="card-text">Ser líder en producción de plantas, y mejorar los estándares de calidad
+                        aportando al mercado de semillas nacional. Fortalecer nuestra experiencia, nuestro equipo de
+                        trabajo y mejor en cuanto a tecnología, esto nos llevará a estar dentro de los mejores del
+                        estado,</p>
+                </div>
+
             </div>
         </div>
 
         <!-- card  2 -->
-        <div class="card1"  class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">Visión</h5>
-                <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestra visión</h6> -->
-                <br>
-                <p class="card-text">Ser líder en producción de plantas, y mejorar los estándares de calidad aportando
-                    al
-                    mercado de semillas nacional. Fortalecer nuestra experiencia, nuestro equipo de trabajo y mejor en
-                    cuanto a
-                    tecnología, esto nos llevará a estar dentro de los mejores del estado</p>
-                <!-- <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a> -->
+        <div class="hijo-vertical">
+            <div class="card">
+                <img src="https://www.nicepng.com/png/full/209-2091930_valores-nuestros-valores.png"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Integridad, Búsqueda permanente de la innovación, Satisfacción al
+                        cliente, Apertura al exterior, Excelencia empresarial, Trabajo en equipo, Compromiso de
+                        las personas.</p>
+                </div>
             </div>
         </div>
-    </div>
+
+        <div class="padre-horizontal2">
+            <div class="hijo-vertical2">
 
 
-    <!-- card  3 -->
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Objetivo</h5>
-            <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestro Objetivo</h6> -->
-            <br>
-            <p class="card-text">Nuestro objetivo se enfoca en satisfacer las necesidades de nuestros clientes,
-                abarcando
-                desde
-                productores nacionales, comunidades y personas particulares.</p>
-            <!-- <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a> -->
+                <!-- card  3 -->
+                <div class="card">
+                    <img src="https://3.bp.blogspot.com/-KlXXLfJXb-k/WuHpC79nxFI/AAAAAAAAADE/JExI3eXy2KE3P0bMPYHe6uz-CnNu52ouACLcBGAs/s1600/objetivos.png"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Nuestro objetivo se enfoca en satisfacer las necesidades de nuestros
+                            clientes, abarcando desde productores nacionales, comunidades y personas particulares.
+                        </p>
+                    </div>
+                </div>
+                <!-- card  4 -->
+
+            </div>
         </div>
-    </div>
-
-    <!-- card  4 -->
-
-    <div  class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Valores</h5>
-            <!-- <h6 class="card-subtitle mb-2 text-muted">Nuestro Objetivo</h6> -->
-            <br>
-            <p class="card-text">Nuestro objetivo se enfoca en satisfacer las necesidades de nuestros clientes,
-                abarcando
-                desde productores nacionales, comunidades y personas particulares.</p>
-            <ol>
-                <li>
-                    Integridad: La honradez y la integridad son nuestros activos más importantes y deben presidir la
-                    dirección
-                    de nuestro negocio.</li>
-
-                <li> permanente de la innovación: Fomentar las ideas nuevas, la iniciativa y creatividad a todos los
-                    niveles.</li>
-
-                <li>Satisfacción del cliente: Situar a nuestros clientes en el centro de nuestras actividades
-                    empresariales
-                    y
-                    contribuir a su éxito.</li>
-
-                <li>Apertura al exterior: Buscar activamente las mejores prácticas en todos los ámbitos con objeto de
-                    poder
-                    ofrecer una oferta de mayor valor a nuestros clientes.</li>
-
-                <li>Excelencia empresarial: Mejora continua, eficacia y eficiencia en las actuaciones de la empresa.
-                </li>
-
-                <li>Trabajo en equipo: Compartir los conocimientos, las ideas y la experiencia de cada uno para tomar
-                    las
-                    mejores decisiones en el ámbito del grupo.</li>
-
-                <li>Compromiso con las personas: Promover el talento, ofrecer oportunidades, desarrollar líderes,
-                    recompensar la
-                    consecución de objetivos.</li>
-
-            </ol>
-        </div>
-    </div>
 
 
 
 
-    <script>nosotros.js</script>
+
 
 </body>
+
+
+<div>
+    <div>
+        <h3>Contactanos:</3>
+    </div>
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputEmail4">Correo</label>
+                <input type="email" class="form-control" id="inputEmail4">
+            </div>
+
+        </div>
+        <div class="form-group">
+            <label for="inputAddress">Dirección</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="Calle, Número ">
+        </div>
+        <div class="form-group">
+            <label for="inputAddress2">Dirección 2</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Departamento, ">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputCity">Ciudad</label>
+                <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputState">Estado</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Elegir...</option>
+                    <option>Aguascalientes</option>
+                    <option>Baja California</option>
+                    <option>Baja California Sur</option>
+                    <option>Campeche</option>
+                    <option>Chihuahua</option>
+                    <option>Durango</option>
+                    <option>Guanajuato</option>
+                    <option>Hidalgo</option>
+                </select>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="inputZip">CP</label>
+                <input type="text" class="form-control" id="inputZip">
+            </div>
+        </div>
+        <div class="form-group">
+
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+</div>
+
 
 </html>
