acerca de hoy cambios3

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -145,6 +145,7 @@
                 <label for="inputCity">Ciudad</label>
                 <input type="text" class="form-control" id="inputCity">
             </div>
+            <!-- Este  Div  crea  lista  parta elegir en  el  comboBox -->
             <div class="form-group col-md-4">
                 <label for="inputState">Estado</label>
                 <select id="inputState" class="form-control">
