agrego html de recomendaciones y js recomendaciones, correciones en template y blog

--- a/views/blog.html
+++ b/views/blog.html
@@ -47,7 +47,7 @@
                 <a class="nav-link nav-link2" href="#">Rastreo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#" tabindex="-1" aria-disabled="true">Otros Vendedores</a>
+                <a class="nav-link nav-link2" href="#" tabindex="-1" aria-disabled="true">Recomendación</a>
             </li>
         </ul>
     </nav>
