--- a/styles/rastreo.css
+++ b/styles/rastreo.css
@@ -1,7 +1,3 @@
-main{
-    background-image: url("../assets/jpg/Background\ Pattern.jpg"); 
-    height:10vh;
-    }
     
     .jumbotron {
     background-image: url("../assets/jpg/Head\ Banner.jpg");
@@ -14,6 +10,7 @@ main{
         margin-left: 70px;
         margin-right: 70px;
         color: whitesmoke;
+        
         
         
     }
@@ -31,3 +28,20 @@ main{
         margin-left: 3px;
     }
     
+    #header {
+        
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+    }
+    
+    .jumbotron2{
+        height:50vh;
+    }
+    
+.section1{
+    height:75vh;
+    background-image: url("../assets/jpg/Background\ Pattern.jpg"); 
+    text-align: center;
+    
+}
