Se corrigen nombres con espacio en las imagenes y se incluye la pagina de tienda, se eliminan etiquetas de head dde sobra

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,10 @@
 main{
-background-image: url("../assets/jpg/Background\ Pattern.jpg"); 
+background-image: url("../assets/jpg/BackgroundPattern.jpg"); 
 height:10vh;
 }
 
 .jumbotron {
-background-image: url("../assets/jpg/Head\ Banner.jpg");
+background-image: url("../assets/jpg/HeadBanner.jpg");
 height:50vh;
 background-size: cover;
 }
