--- a/views/team.html
+++ b/views/team.html
@@ -46,8 +46,8 @@
     <br>
     <h1 class="center"> Acerca de Nosotros <h1>
             <br>
-            
-            
+
+
 
 </div>
 
@@ -56,7 +56,7 @@
 
     <div class="card-deck">
         <div class="card">
-            <img   class="img-mediana"src="/assets/jpg/amy.jpeg" class="card-img-top" alt="...">
+            <img class="img-mediana" src="/assets/jpg/amy.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title equipo">Amy</h5>
                 <br>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="card">
-            <img   class="img-mediana"src="/assets/jpg/loarca.png" class="card-img-top" alt="...">
+            <img class="img-mediana" src="/assets/jpg/loarca.png" class="card-img-top" alt="...">
             <br>
             <div class="card-body">
                 <h5 class="card-title equipo">Carlos Loarca</h5>
@@ -79,12 +79,13 @@
             </div>
         </div>
         <div class="card">
-            <img  class="img-mediana" src="/assets/jpg/cPena.jpeg" class="card-img-top" alt="...">
+            <img class="img-mediana" src="/assets/jpg/cPena.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title equipo">Carlos Peña</h5>
                 <br>
-                <p class="card-text equipo2">Me apasiona el deporte, bailar y la música., estar con buenas amistades. Mis encanta el sushi, el chocolate y estar buenas amistades.  Soy del Edo. de México.
-                    </p>
+                <p class="card-text equipo2">Me apasiona el deporte, bailar y la música., estar con buenas amistades.
+                    Mis encanta el sushi, el chocolate y estar buenas amistades. Soy del Edo. de México.
+                </p>
 
             </div>
         </div>
