cambios de integracion

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -18,7 +18,7 @@
             <a class="nav-link  nav-link2" href="#">Galería</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link nav-link2" href="#">Blog</a>
+            <a class="nav-link nav-link2" href="/views/nosotros.html">Blog</a>
         </li>
         <li class="nav-item">
             <a class="nav-link nav-link2" href="#">Rastreo</a>
