--- a/views/rastreo.html
+++ b/views/rastreo.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNav ">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/assets/">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">¿Quiénes Somos?</a>
+                    <a class="nav-link" href="/views/nosotros.html">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda en Línea</a>
+                    <a class="nav-link" href="/views/tienda.html">Tienda en Línea</a>
                 </li>
                 </li>
             </ul>
@@ -42,13 +42,13 @@
                 <a class="nav-link  nav-link2" href="#">Galeria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Blog</a>
+                <a class="nav-link nav-link2" href="/views/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Rastreo</a>
+                <a class="nav-link nav-link2" href="/views/rastreo.html">Rastreo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Tu Semilla Ideal</a>
+                <a class="nav-link nav-link2" href="/views/recomendacion.html">Tu Semilla Ideal</a>
             </li>
         </ul>
     </nav>
